shell help. start emacs with zh_cn.UTF-8 to enable chinese input

--- a/private/ryang-custom/help/shell.org
+++ b/private/ryang-custom/help/shell.org
@@ -326,3 +326,7 @@ create a bash file /opt/Citrix/ICAClient/wfica with
 #!/bin/bash
 LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libaoss.so /opt/Citrix/ICAClient/wfica-real "$@"
 sudo chmod +x /opt/Citrix/ICAClient/wfica
+* Emacs
+  - start in ubuntu to enable IME
+env LC_CTYPE=zh_CN.UTF-8 emacs
+
